Adiciona ajustes extras

--- a/Escola.Web/Views/Shared/_Layout.cshtml
+++ b/Escola.Web/Views/Shared/_Layout.cshtml
@@ -20,10 +20,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Aluno" asp-action="Listar">Alunos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Aluno" asp-action="Index">Alunos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Turma" asp-action="List">Turmas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AlunoTurma" asp-action="List">Alunos e Turmas</a>
                         </li>
                     </ul>
                 </div>
